java-jira-office/java-jira-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: java-jira-office
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-jira-office
  serviceName: java-jira-office    
  template:
    metadata:
      labels:
        app: java-jira-office
    spec:
      containers:
      - name: java-jira-office
        image: wolihi/java-jira-office:last
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: jira-data
          mountPath: /var/atlassian/
          subPath: jira-application-data
        - name: jira-data
          mountPath: /etc/mysql/conf.d
          subPath: jira-logs
  volumeClaimTemplates:
  - metadata:
      name: jira-data
    spec:
      accessModes:
      - "ReadWriteOnce"
      storageClassName: jira-storage
      resources:
        requests:
          storage: 3Gi
