java-jira-office/java-jira-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-java-jira-office
  namespace: default
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    wginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Real-IP $http_x_forwarded_for;
spec:
  rules:
  - host: jira.mouthmelt.com
    http:
      paths:
      - backend:
          serviceName: java-jira-office-svc
          servicePort: 8080
        path: /
